<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4198E0" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/order_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/button_order_new"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/view_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@android:color/transparent"
                android:text="@string/button_view_order"
                android:textColor="#ffffff" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/manage_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@android:color/transparent"
                android:text="@string/button_manage_friends"
                android:textColor="#ffffff" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:background="@android:color/transparent"
                android:text="@string/button_support"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>